feat: encode chain id into path
